--- a/experiments/2_low_cov_cnv/environment.yaml
+++ b/experiments/2_low_cov_cnv/environment.yaml
@@ -1,10 +1,10 @@
+name: exp2
 channels:
   - conda-forge
   - bioconda
   - r
   - defaults
 dependencies:
-  - bcftools=1.3.1 # probably do not need.
   - bedtools=2.27.1
   - biopython
   - bwa=0.7.12
@@ -14,10 +14,9 @@ dependencies:
   - python=3.6.5
   - samtools=1.3.1
   - sra-tools=2.8.2
-  - snakemake=4.8.1
+  - snakemake=5.3.0
   - pyyaml=3.11
   - pandas=0.20.3
   - parallel
-  - r-base=3.3.2
-  - r-rlang=0.2.0
+  - r-base
   - r-tidyverse
